added note section

--- a/public/style.css
+++ b/public/style.css
@@ -31,3 +31,12 @@
   font-weight: bold;
   font-size: larger;
 }
+#articles {
+  display: inline-block;
+  overflow: auto;
+  width: 60%;
+}
+#notes {
+  float: right;
+  width: 30%;
+}
